Workbench transparency rendering broken #65974

Closed
opened 2019-06-20 23:47:39 +02:00 by Casey Connor · 3 comments

Operating system: Kubuntu 18.10, 4.18.0-22-generic #23-Ubuntu SMP Tue Jun 4 20:22:46 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1)
Broken: 2.80, d30f72dfd8

  • start blender with new profile directory
  • in Properties, go to render settings, change to Workbench renderer
  • change viewport render settings to "render"
  • duplicate cube with shift-D, move the duplicate next to original cube, left click to end movement
  • go to Material tab for new cube
  • in Viewport Display, click color swatch and change alpha to .04
  • select original cube, remove existing material slot with "-" button, click "New" to make new material
  • in Viewport Display, click color swatch and adjust alpha with mouse drags left and right

...see that the alpha for both cubes changes as the slider is adjusted, even though they have different materials.

...see also that when the alpha slider goes up to 1.00, the objects have different transparency.

  • change viewport render to "Solid", drag the alpha value, and see that the alpha is rendered independently as expected.
Operating system: Kubuntu 18.10, 4.18.0-22-generic #23-Ubuntu SMP Tue Jun 4 20:22:46 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1) Broken: 2.80, d30f72dfd8ac * start blender with new profile directory * in Properties, go to render settings, change to Workbench renderer * change viewport render settings to "render" * duplicate cube with shift-D, move the duplicate next to original cube, left click to end movement * go to Material tab for new cube * in Viewport Display, click color swatch and change alpha to .04 * select original cube, remove existing material slot with "-" button, click "New" to make new material * in Viewport Display, click color swatch and adjust alpha with mouse drags left and right ...see that the alpha for both cubes changes as the slider is adjusted, even though they have different materials. ...see also that when the alpha slider goes up to 1.00, the objects have different transparency. * change viewport render to "Solid", drag the alpha value, and see that the alpha is rendered independently as expected.
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae
Clément Foucault was assigned by Sebastian Parborg 2019-06-21 15:55:05 +02:00

This issue was referenced by cbc0ad07b3

This issue was referenced by cbc0ad07b3c8143439305d54f3f36e0180351ac1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65974
No description provided.