Fix T65974 Workbench: transparency rendering broken